--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --background: #aaa;
-  --foreground: #171717;
+  --background: linear-gradient(to top right, #8880e8, #d2adf7);
+  --foreground: #ffffff;
 }
 /* 
 @media (prefers-color-scheme: dark) {
@@ -10,8 +10,92 @@
   }
 } */
 
+html {
+  height: 100%;
+  margin: 0;
+  font-size: 14px; /* Set the base font size for the root */
+}
+
 body {
   color: var(--foreground);
+  margin: 0;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem; /* 1rem will equal the 16px base font size */
+
+  /* min-height: 100vh; */
+}
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+/* 1. Use a more-intuitive box-sizing model */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* 2. Remove default margin */
+* {
+  margin: 0;
+}
+
+body {
+  /* 3. Add accessible line-height */
+  line-height: 1.5;
+  /* 4. Improve text rendering */
+  -webkit-font-smoothing: antialiased;
+}
+
+/* 5. Improve media defaults */
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/* 6. Inherit fonts for form controls */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* 7. Avoid text overflows */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* 8. Improve line wrapping */
+p {
+  text-wrap: pretty;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
+/*
+  9. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
 }
