--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -20,7 +20,7 @@ body {
   color: var(--foreground);
   margin: 0;
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 1rem; /* 1rem will equal the 16px base font size */
 
   /* min-height: 100vh; */
