--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,6 +1,9 @@
 :root {
-  --background: linear-gradient(to top right, #8880e8, #d2adf7);
+  background: linear-gradient(to top, #0e1014, #2d3950);
   --foreground: #ffffff;
+  --text: #ffffff;
+
+  /* #0e1014  #2d3950*/
 }
 /* 
 @media (prefers-color-scheme: dark) {
@@ -20,6 +23,7 @@ body {
   color: var(--foreground);
   margin: 0;
   background: var(--background);
+
   /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 1rem; /* 1rem will equal the 16px base font size */
 
